[package]
name = "hyperion-device"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-capability = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-context = { workspace = true }
hyperion-storage = { workspace = true }
hyperion-workspace = { workspace = true }
tempfile = { workspace = true }
