[package]
name = "hyperion-explainability"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-capability = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
hyperion-privacy = { workspace = true }
hyperion-recovery = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-storage = { workspace = true }
