[package]
name = "hyperion-explainability"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-ai-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-events = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-crypto = { workspace = true }
hyperion-storage = { workspace = true }
tempfile = { workspace = true }
