[package]
name = "hyperion-federation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-agent-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-explainability = { workspace = true }
hyperion-observability = { workspace = true }
hyperion-scheduler = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
