[package]
name = "hyperion-intent"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-capability = { workspace = true }
hyperion-context = { workspace = true }
hyperion-explainability = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
hyperion-memory = { workspace = true }
hyperion-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
