[package]
name = "hyperion-intent"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-ai-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-context = { workspace = true }
hyperion-explainability = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
hyperion-memory = { workspace = true }
# Real, live goal-template registry -- see `templates::match_template_with_plugins`.
hyperion-plugin-framework = { workspace = true }
hyperion-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-crypto = { workspace = true }
tempfile = { workspace = true }
