[package]
name = "hyperion-ipc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hyperion L1 IPC framework: capability-scoped message passing (docs/30-ipc-framework.md)."

[dependencies]
hyperion-capability = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
