[package]
name = "hyperion-ipc"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Hyperion L1 IPC framework: capability-scoped message passing (docs/30-ipc-framework.md)."

[dependencies]
hyperion-capability = { workspace = true }
bitflags = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
