[package]
name = "hyperion-knowledge-graph"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-capability = { workspace = true }
hyperion-events = { workspace = true }
# Real (topic -> capability_id) lookup -- see `providers::capability_for_topic`.
hyperion-plugin-framework = { workspace = true }
hyperion-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-crypto = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
