[package]
name = "hyperion-memory"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-ai-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
# Real, live external memory-source registry -- see `providers::capability_for`.
hyperion-plugin-framework = { workspace = true }
hyperion-scheduler = { workspace = true }
hyperion-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-crypto = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
