[package]
name = "hyperion-observability"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-capability = { workspace = true }
hyperion-explainability = { workspace = true }
hyperion-model-router = { workspace = true }
thiserror = { workspace = true }
