[package]
name = "hyperion-privacy"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-capability = { workspace = true }
# Real Ed25519 signing/verification for ConsentGrant.proof -- see consent.rs's own doc comment.
hyperion-crypto = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
hyperion-recovery = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-storage = { workspace = true }
tempfile = { workspace = true }
