[package]
name = "hyperion-recovery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-agent-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-storage = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
