[package]
name = "hyperion-recovery"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-agent-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-ai-runtime = { workspace = true }
hyperion-storage = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
