[package]
name = "hyperion-scalability"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-capability = { workspace = true }
hyperion-observability = { workspace = true }
hyperion-plugin-framework = { workspace = true }
hyperion-privacy = { workspace = true }
hyperion-scheduler = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-crypto = { workspace = true }
tempfile = { workspace = true }
