[package]
name = "hyperion-scheduler"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Hyperion unified multi-resource scheduler: Weighted-EDF + Dominant Resource Fairness (docs/04-scheduler.md)."

[dependencies]
hyperion-capability = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
