[package]
name = "hyperion-scheduler"
version = "0.3.0"
edition.workspace = true
license.workspace = true
description = "Hyperion unified multi-resource scheduler: Weighted-EDF + Dominant Resource Fairness (docs/04-scheduler.md)."

[dependencies]
hyperion-capability = { workspace = true }
hyperion-model-router = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-ai-runtime = { workspace = true }
proptest = { workspace = true }
