[package]
name = "hyperion-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-capability = { workspace = true }
hyperion-plugin-framework = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
