[package]
name = "hyperion-security"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-ai-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-crypto = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
hyperion-recovery = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-storage = { workspace = true }
tempfile = { workspace = true }
